[UPDATE]/Add multi-language support to authentication and email services by introducing language parameters in DTOs and email events, enhancing user experience across various functionalities.

--- a/Frontend/assets/lang/en.json
+++ b/Frontend/assets/lang/en.json
@@ -283,5 +283,6 @@
   "changePasswordTitle": "Change Password - EDISA",
   "verifyEmailTitle": "Account Created Successfully - EDISA",
   "accountActivatedTitle": "Account Activated - EDISA",
-  "deactiveUsersTitle": "Deactive Users - Admin Panel"
+  "deactiveUsersTitle": "Deactive Users - Admin Panel",
+  "accountHasBeenDeletedContactSupport": "Account has been deleted. Please contact support for assistance."
 } 
