[UPDATE]/Add multi-language support across services by introducing language parameters in various DTOs, enhancing email notifications, and refining frontend assets for improved user experience.

--- a/Frontend/assets/lang/ja.json
+++ b/Frontend/assets/lang/ja.json
@@ -9,6 +9,10 @@
   "noFiles": "ファイルがありません。",
   "chooseFile": "ファイルを選択",
   "changeLanguage": "言語を変更",
+  "language": "言語",
+  "saveSettings": "設定を保存",
+  "enableDarkMode": "ダークモードを有効化",
+  "enableLightMode": "ライトモードを有効化",
   "successUpload": "ファイルのアップロードに成功しました！",
   "successDelete": "ファイルの削除に成功しました！",
   "errorUpload": "ファイルのアップロード中にエラーが発生しました！",
@@ -23,8 +27,8 @@
   "enterPassword": "パスワードを入力",
   "username": "ユーザー名",
   "enterUsername": "ユーザー名を入力",
-  "fullname": "氏名（任意）",
-  "enterFullname": "氏名を入力",
+  "fullName": "氏名",
+  "enterFullName": "氏名を入力",
   "forgotPassword": "パスワードをお忘れですか？",
   "rememberMe": "ログイン状態を保持する",
   "signIn": "サインイン",
@@ -55,6 +59,11 @@
   "goToLogin": "ログインへ",
   "notReceivedEmail": "メールが届きませんか？",
   "resendVerification": "確認メールを再送信",
+  "deactivateAccount": "アカウントを無効化",
+  "deactiveUsersList": "非アクティブユーザー一覧",
+  "enterPhoneNumber": "電話番号を入力",
+  "myProfileTitle": "マイプロフィール",
+  "security": "セキュリティ",
   "accountActivatedTitle": "アカウントが有効化されました！🎉",
   "accountActivatedDesc": "アカウントが正常に有効化されました。ログインしてサービスをご利用いただけます。",
   "redirectingToLogin": "<span id='countdown' class='fw-bold text-primary'>5</span>秒後にログインページへリダイレクトします...",
@@ -63,9 +72,7 @@
   "modalTitle": "モーダルタイトル",
   "modalBody": "モーダル本文",
   "modalFooter": "モーダルフッター",
-  "close": "閉じる",
   "save": "保存",
-  "cancel": "キャンセル",
   "notificationSuccess": "成功！",
   "notificationError": "エラー！",
   "notificationInfo": "情報！",
@@ -97,7 +104,6 @@
   "editUser": "ユーザー編集",
   "userInformation": "ユーザー情報",
   "loginProvider": "ログインプロバイダー",
-  "saveProfilePicture": "プロフィール画像を保存",
   "dragDropImageHere": "ここに画像をドラッグ＆ドロップ",
   "orClickToBrowse": "またはクリックして選択",
   "howToCrop": "トリミング方法",
@@ -113,25 +119,29 @@
   "rotateRight": "右",
   "reset": "リセット",
   "preview": "プレビュー",
-  "saveChanges": "変更を保存",
   "dashboardAdminTitle": "ダッシュボード - 管理パネル",
   "systemName": "EDISA",
   "searchPlaceholder": "検索...",
   "myProfile": "マイプロフィール",
   "settings": "設定",
   "faq": "よくある質問",
-  "logout": "ログアウト",
   "madeWith": "作成",
   "by": "by",
+  "viewUserDetails": "ユーザー詳細",
   "license": "ライセンス",
   "moreThemes": "その他のテーマ",
   "documentation": "ドキュメント",
   "support": "サポート",
+  "profileDetails": "プロフィール詳細",
   "appsAndPages": "アプリ＆ページ",
   "userManagement": "ユーザー管理",
+  "userNotFoundOrInvalidToken": "ユーザーが見つからないか、無効なトークンです。",
+  "areYouSureYouWantToDeactivateYourAccount": "本当にアカウントを無効化しますか？",
   "allUsers": "全ユーザー",
   "activeUsers": "アクティブユーザー",
   "deactiveUsers": "非アクティブユーザー",
+  "inactiveUsers": "非アクティブユーザー",
+  "bannedUsers": "禁止ユーザー",
   "logOut": "ログアウト",
   "dashboard": "ダッシュボード",
   "activeUsersList": "アクティブユーザー一覧",
@@ -149,25 +159,21 @@
   "team": "チーム",
   "selectStatus": "ステータスを選択",
   "banned": "禁止",
-  "username": "ユーザー名",
-  "fullname": "氏名（任意）",
-  "email": "メールアドレス",
   "phone": "電話番号",
   "status": "ステータス",
   "lastLoginAt": "最終ログイン日時",
-  "actions": "操作",
   "phoneNumber": "電話番号",
   "dateOfBirth": "生年月日",
   "address": "住所",
   "emailVerified": "メール認証済み",
   "bio": "自己紹介",
   "lastLogin": "最終ログイン",
+  "areYouSureDeleteAccount": "本当にアカウントを削除しますか？",
+  "noGoingBack": "アカウントを削除すると、元に戻すことはできません。よく確認してください。",
+  "confirmAccountDeactivation": "アカウントの無効化を確認",
   "created": "作成日",
   "submit": "送信",
-  "cancel": "キャンセル",
-  "saveChanges": "変更を保存",
-  "userDetails": "ユーザー詳細",
-  "editUser": "ユーザー編集",
+  "deleteAccount": "アカウントを削除",
   "deleteUser": "ユーザー削除",
   "deleteUserConfirmTitle": "ユーザー削除の確認",
   "warningActionCannotBeUndone": "警告: この操作は元に戻せません！",
@@ -175,19 +181,28 @@
   "deleteUserDeactivate": "ユーザーアカウントを即時無効化",
   "deleteUserSendEmail": "ユーザーに無効化メールを送信",
   "deleteUserRemoveSessions": "すべてのアクティブなセッションとトークンを削除",
-  "deleteUserMoveToDeactive": "ユーザーを非アクティブユーザーリストに移動",
-  "userInformation": "ユーザー情報",
-  "notAvailable": "利用不可",
-  "optionalPhoneNumber": "電話番号（任意）",
-  "optionalDateOfBirth": "生年月日（任意）",
-  "optionalAddressInformation": "住所（任意）",
-  "optionalBiography": "自己紹介または説明（任意）",
-  "pleaseProvideValidFullName": "有効な氏名を入力してください。",
-  "usernameCannotChange": "ユーザー名は変更できません",
-  "emailCannotChange": "メールアドレスは変更できません",
-  "pleaseSelectStatus": "ステータスを選択してください。",
-  "close": "閉じる",
-  "save": "保存",
+  "profileUpdatedSuccessfully": "プロフィールが更新されました！",
+  "failedToUpdateProfile": "プロフィールの更新に失敗しました。",
+  "updateFailed": "更新に失敗しました。",
+  "pleaseSelectValidImageFile": "有効な画像ファイルを選択してください。",
+  "imageSizeMustBeLessThan5MB": "画像サイズは5MB未満である必要があります。",
+  "imageSizeIsVerySmall": "画像サイズが非常に小さいです。",
+  "cropperNotReady": "画像トリミングが準備できていません。",
+  "cropAreaInvalid": "トリミング範囲が無効です。",
+  "cropAreaLargerThanImage": "トリミング範囲が画像より大きいです。",
+  "canvasIsNull": "キャンバスが無効です。",
+  "profilePictureCroppedSuccessfully": "プロフィール画像がトリミングされました！",
+  "failedToCropImage": "画像のトリミングに失敗しました。",
+  "profilePictureRemoved": "プロフィール画像が削除されました。",
+  "noUsersFound": "ユーザーが見つかりません。",
+  "deactivationEmailSent": "無効化メールが送信されました。",
+  "loggingInWithGoogle": "Googleでログイン中...",
+  "googleLoginSuccessfulRedirecting": "Googleログイン成功。リダイレクト中...",
+  "googleLoginFailed": "Googleログインに失敗しました。",
+  "accountBanned": "あなたのアカウントは凍結されています。",
+  "accountDeleted": "あなたのアカウントは削除されました。",
+  "loggingOut": "ログアウト中...",
+  "loggedOutSuccessfully": "ログアウトしました。",
   "addNewUser": "新規ユーザー追加",
   "manageActiveUsers": "アクティブユーザー管理",
   "viewDeactiveUsers": "非アクティブユーザー表示",
@@ -206,11 +221,6 @@
   "restoring": "復元中...",
   "restoreUser": "ユーザーを復元",
   "viewUser": "ユーザーを表示",
-  "editUser": "ユーザー編集",
-  "deleteUser": "ユーザー削除",
-  "delete": "削除",
-  "actions": "操作",
-  "searchPlaceholder": "検索...",
   "export": "エクスポート",
   "print": "印刷",
   "csv": "CSV",
@@ -224,14 +234,13 @@
   "statusRequired": "ステータスは必須です。",
   "saving": "保存中...",
   "saveChanges": "変更を保存",
+  "close": "閉じる",
   "previous": "前へ",
   "next": "次へ",
   "page": "ページ",
   "of": "の",
   "totalDeletedUsers": "削除済みユーザー合計",
   "deletedAt": "削除日時",
-  "created": "作成日",
-  "lastLoginAt": "最終ログイン日時",
   "notAvailable": "利用不可",
   "never": "なし",
   "id": "ID",
@@ -263,61 +272,24 @@
   "userUpdatedSuccessfully": "ユーザーが更新されました！",
   "failedToUpdateUser": "ユーザーの更新に失敗しました。",
   "invalidRequest": "無効なリクエストです。",
+  "invalidCredentials": "メールアドレスまたはパスワードが正しくありません。",
+  "userAlreadyExists": "メールアドレス '{email}' のユーザーは既に存在します。",
+  "emailNotAvailable": "メールアドレスが利用できません",
+  "loginFailed": "ログインに失敗しました。",
+  "loginFailedPleaseTryAgain": "ログインに失敗しました。もう一度お試しください。",
+  "loginSuccessfulRedirecting": "ログイン成功、リダイレクト中...",
   "userDeletedSuccessfully": "ユーザーが削除されました！",
   "yourAccountHasBeenDeleted": "アカウントが削除されました。",
   "failedToDeleteUser": "ユーザーの削除に失敗しました。",
-  "userRestoredSuccessfully": "ユーザーが復元されました！",
+  "userRestoredSuccessfully": "ユーザーの復元に成功しました！",
   "failedToRestoreUser": "ユーザーの復元に失敗しました。",
   "failedToLoadUserInformation": "ユーザー情報の読み込みに失敗しました。",
   "restore": "復元",
   "edit": "編集",
-  "deleteUserConfirmTitle": "ユーザー削除の確認",
-  "warningActionCannotBeUndone": "警告: この操作は元に戻せません！",
-  "deleteUserConfirmDesc": "このユーザーアカウントを完全に削除しようとしています。この操作により:",
-  "deleteUserDeactivate": "ユーザーアカウントを即時無効化",
-  "deleteUserSendEmail": "ユーザーに無効化メールを送信",
-  "deleteUserRemoveSessions": "すべてのアクティブなセッションとトークンを削除",
-  "deleteUserMoveToDeactive": "ユーザーを非アクティブユーザーリストに移動",
-  "submit": "送信",
-  "cancel": "キャンセル",
-  "save": "保存",
-  "profileUpdatedSuccessfully": "プロフィールが更新されました！",
-  "failedToUpdateProfile": "プロフィールの更新に失敗しました。",
-  "updateFailed": "更新に失敗しました。",
-  "pleaseSelectValidImageFile": "有効な画像ファイルを選択してください。",
-  "imageSizeMustBeLessThan5MB": "画像サイズは5MB未満である必要があります。",
-  "imageSizeIsVerySmall": "画像サイズが非常に小さいです。",
-  "cropperNotReady": "画像トリミングが準備できていません。",
-  "cropAreaInvalid": "トリミング範囲が無効です。",
-  "cropAreaLargerThanImage": "トリミング範囲が画像より大きいです。",
-  "canvasIsNull": "キャンバスが無効です。",
-  "profilePictureCroppedSuccessfully": "プロフィール画像がトリミングされました！",
-  "failedToCropImage": "画像のトリミングに失敗しました。",
-  "profilePictureRemoved": "プロフィール画像が削除されました。",
-  "noInformationChanged": "変更はありません。",
-  "noInformationChanged": "変更はありません。",
-  "noUsersFound": "ユーザーが見つかりません。",
-  "deactivationEmailSent": "無効化メールが送信されました。",
-  "loggingInWithGoogle": "Googleでログイン中...",
-  "googleLoginSuccessfulRedirecting": "Googleログイン成功、リダイレクト中...",
-  "googleLoginFailed": "Googleログインに失敗しました。",
-  "accountBanned": "アカウントが凍結されています。",
-  "accountDeleted": "アカウントが削除されています。",
-  "loggingOut": "ログアウト中...",
-  "loggedOutSuccessfully": "ログアウトしました。",
-  "addNewUser": "新規ユーザー追加",
-  "manageActiveUsers": "アクティブユーザー管理",
-  "viewDeactiveUsers": "非アクティブユーザー表示",
-  "exportAllUsers": "全ユーザーをエクスポート",
-  "currentlyActive": "現在アクティブ",
-  "currentlyInactive": "現在非アクティブ",
-  "currentlyBanned": "現在禁止",
-  "allUsersInSystem": "システム内の全ユーザー",
-  "quickActions": "クイックアクション",
   "restoreUserConfirmTitle": "ユーザー復元の確認",
   "restoreUserAccount": "ユーザーアカウントを復元",
-  "restoreUserConfirmDesc": "このユーザーアカウントを復元しようとしています。この操作により:",
-  "restoreUserReactivate": "ユーザーアカウントを再有効化",
+  "restoreUserConfirmDesc": "このユーザーアカウントを復元しようとしています。この操作により：",
+  "restoreUserReactivate": "アカウントを即時再有効化",
   "restoreUserSendEmail": "ユーザーに再有効化メールを送信",
   "restoreUserAllowLogin": "ユーザーが再度ログインできるようにする",
   "restoreUserMoveToActive": "ユーザーをアクティブユーザーリストに戻す",
@@ -348,18 +320,217 @@
   "newPasswordRequired": "新しいパスワードは必須です",
   "newPasswordInvalid": "新しいパスワードは6文字以上で、大文字・小文字・数字を含めてください",
   "newPasswordsDoNotMatch": "新しいパスワードが一致しません",
+  "passwordsDoNotMatch": "パスワードが一致しません",
+  "passwordChangedSuccessfully": "パスワードが変更されました！",
   "mustBeLoggedInToChangePassword": "パスワードを変更するにはログインが必要です",
   "passwordChangeFailed": "パスワードの変更に失敗しました！",
   "passwordChangeFailedTryAgain": "パスワードの変更に失敗しました。もう一度お試しください。",
   "loginTitle": "ログイン - EDISA",
   "registerTitle": "登録 - EDISA",
-  "forgotPasswordTitle": "パスワードをお忘れですか - EDISA",
   "resetPasswordTitle": "パスワードをリセット - EDISA",
-  "changePasswordTitle": "パスワード変更 - EDISA",
-  "verifyEmailTitle": "アカウント作成成功 - EDISA",
-  "accountActivatedTitle": "アカウント有効化 - EDISA",
   "deactiveUsersTitle": "無効ユーザー - 管理パネル",
+  "activeUsersTitle": "ユーザー - 管理パネル",
   "emailRequired": "メールアドレスは必須です",
   "passwordRequired": "パスワードは必須です",
-  "accountHasBeenDeletedContactSupport": "アカウントは削除されました。サポートまでご連絡ください。"
-} 
+  "accountHasBeenDeletedContactSupport": "アカウントは削除されました。サポートまでご連絡ください。",
+  "errorCodes": {
+    "ACCOUNT_DELETED": "アカウントが削除されました。",
+    "ACCOUNT_BANNED": "あなたのアカウントは凍結されています",
+    "ACCOUNT_NOT_VERIFIED": "アカウントが認証されていません。",
+    "INVALID_CREDENTIALS": "メールアドレスまたはパスワードが無効です。",
+    "USER_NOT_FOUND": "ユーザーが見つかりません。",
+    "USER_ALREADY_EXISTS": "ユーザーは既に存在します。",
+    "EMAIL_NOT_AVAILABLE": "メールアドレスが利用できません。",
+    "INVALID_REQUEST": "無効なリクエストです。",
+    "AUTHENTICATION_REQUIRED": "認証が必要です。",
+    "UNAUTHORIZED": "認証されていません。",
+    "FORBIDDEN": "アクセスが禁止されています。",
+    "INTERNAL_SERVER_ERROR": "内部サーバーエラーが発生しました。",
+    "BAD_REQUEST": "不正なリクエストです。",
+    "CONFLICT": "リソースの競合が発生しました。",
+    "NOT_FOUND": "リソースが見つかりません。",
+    "VALIDATION_ERROR": "検証エラーが発生しました。",
+    "EMAIL_SEND_FAILED": "メールの送信に失敗しました。",
+    "PASSWORD_CHANGE_FAILED": "パスワードの変更に失敗しました。",
+    "PROFILE_UPDATE_FAILED": "プロフィールの更新に失敗しました。",
+    "FILE_UPLOAD_FAILED": "ファイルのアップロードに失敗しました。",
+    "FILE_DELETE_FAILED": "ファイルの削除に失敗しました。",
+    "FILE_NOT_FOUND": "ファイルが見つかりません。",
+    "INVALID_FILE_TYPE": "無効なファイルタイプです。",
+    "FILE_TOO_LARGE": "ファイルが大きすぎます。",
+    "GOOGLE_LOGIN_FAILED": "Googleログインに失敗しました。",
+    "ACCOUNT_ACTIVATION_FAILED": "アカウントの有効化に失敗しました。",
+    "PASSWORD_RESET_FAILED": "パスワードのリセットに失敗しました。",
+    "EMAIL_VERIFICATION_FAILED": "メール認証に失敗しました。",
+    "SESSION_EXPIRED": "セッションが期限切れです。",
+    "TOKEN_INVALID": "トークンが無効です。",
+    "TOKEN_EXPIRED": "トークンが期限切れです。",
+    "RATE_LIMIT_EXCEEDED": "レート制限を超えました。",
+    "SERVICE_UNAVAILABLE": "サービスが利用できません。",
+    "MAINTENANCE_MODE": "サービスはメンテナンス中です。",
+    "INVALID_EMAIL_FORMAT": "無効なメール形式です。",
+    "WEAK_PASSWORD": "パスワードが弱すぎます。",
+    "PASSWORD_MISMATCH": "パスワードが一致しません。",
+    "REQUIRED_FIELD_MISSING": "必須フィールドが不足しています。",
+    "INVALID_PHONE_FORMAT": "無効な電話番号形式です。",
+    "INVALID_DATE_FORMAT": "無効な日付形式です。",
+    "USER_DELETE_FAILED": "ユーザーの削除に失敗しました。",
+    "USER_RESTORE_FAILED": "ユーザーの復元に失敗しました。",
+    "USER_UPDATE_FAILED": "ユーザーの更新に失敗しました。",
+    "USER_CREATE_FAILED": "ユーザーの作成に失敗しました。",
+    "PROFILE_PICTURE_UPDATE_FAILED": "プロフィール画像の更新に失敗しました。",
+    "PROFILE_PICTURE_DELETE_FAILED": "プロフィール画像の削除に失敗しました。",
+    "INVALID_IMAGE_FORMAT": "無効な画像形式です。",
+    "IMAGE_TOO_LARGE": "画像ファイルが大きすぎます。",
+    "IMAGE_TOO_SMALL": "画像ファイルが小さすぎます。",
+    "CROP_AREA_INVALID": "無効な切り取り領域です。",
+    "CANVAS_ERROR": "キャンバスエラーが発生しました。",
+    "CROPPER_NOT_READY": "画像クロッパーが準備できていません。",
+    "NO_CHANGES_DETECTED": "変更が検出されませんでした。",
+    "FUTURE_DATE_NOT_ALLOWED": "将来の日付は許可されていません。",
+    "INVALID_CHARACTERS": "無効な文字が検出されました。",
+    "FIELD_TOO_LONG": "フィールド値が長すぎます。",
+    "FIELD_TOO_SHORT": "フィールド値が短すぎます。",
+    "DUPLICATE_VALUE": "重複値が検出されました。",
+    "INVALID_STATUS": "無効なステータス値です。",
+    "INVALID_PROVIDER": "無効なプロバイダー値です。",
+    "ACCOUNT_ALREADY_ACTIVE": "アカウントは既にアクティブです。",
+    "ACCOUNT_ALREADY_VERIFIED": "アカウントは既に認証されています。",
+    "ACCOUNT_ALREADY_BANNED": "アカウントは既に禁止されています。",
+    "ACCOUNT_ALREADY_DELETED": "アカウントは既に削除されています。",
+    "EMAIL_ALREADY_VERIFIED": "メールは既に認証されています。",
+    "EMAIL_ALREADY_EXISTS": "メールは既に存在します。",
+    "USERNAME_ALREADY_EXISTS": "ユーザー名は既に存在します。",
+    "PHONE_ALREADY_EXISTS": "電話番号は既に存在します。",
+    "INVALID_VERIFICATION_CODE": "無効な認証コードです。",
+    "VERIFICATION_CODE_EXPIRED": "認証コードが期限切れです。",
+    "TOO_MANY_ATTEMPTS": "試行回数が多すぎます。後でもう一度お試しください。",
+    "ACCOUNT_LOCKED": "アカウントが一時的にロックされています。",
+    "PASSWORD_RESET_EXPIRED": "パスワードリセットリンクが期限切れです。",
+    "INVALID_RESET_TOKEN": "無効なパスワードリセットトークンです。",
+    "GOOGLE_AUTH_FAILED": "Google認証に失敗しました。",
+    "EXTERNAL_SERVICE_ERROR": "外部サービスエラーが発生しました。",
+    "DATABASE_ERROR": "データベースエラーが発生しました。",
+    "CACHE_ERROR": "キャッシュエラーが発生しました。",
+    "CONFIGURATION_ERROR": "設定エラーが発生しました。",
+    "FEATURE_NOT_AVAILABLE": "機能が利用できません。",
+    "UPGRADE_REQUIRED": "アップグレードが必要です。",
+    "DEPRECATED_FEATURE": "この機能は非推奨です。",
+    "INVALID_API_VERSION": "無効なAPIバージョンです。",
+    "METHOD_NOT_ALLOWED": "メソッドが許可されていません。",
+    "NOT_ACCEPTABLE": "受け入れられません。",
+    "REQUEST_TIMEOUT": "リクエストがタイムアウトしました。",
+    "LENGTH_REQUIRED": "長さが必要です。",
+    "PRECONDITION_FAILED": "前提条件が失敗しました。",
+    "PAYLOAD_TOO_LARGE": "ペイロードが大きすぎます。",
+    "URI_TOO_LONG": "URIが長すぎます。",
+    "UNSUPPORTED_MEDIA_TYPE": "サポートされていないメディアタイプです。",
+    "RANGE_NOT_SATISFIABLE": "範囲が満たされません。",
+    "EXPECTATION_FAILED": "期待が失敗しました。",
+    "I_AM_A_TEAPOT": "私はティーポットです。",
+    "MISDIRECTED_REQUEST": "リクエストが間違った方向に送信されました。",
+    "LOCKED": "リソースがロックされています。",
+    "FAILED_DEPENDENCY": "依存関係が失敗しました。",
+    "TOO_EARLY": "早すぎます。",
+    "PRECONDITION_REQUIRED": "前提条件が必要です。",
+    "REQUEST_HEADER_FIELDS_TOO_LARGE": "リクエストヘッダーフィールドが大きすぎます。",
+    "UNAVAILABLE_FOR_LEGAL_REASONS": "法的理由により利用できません。",
+    "HTTP_VERSION_NOT_SUPPORTED": "HTTPバージョンがサポートされていません。",
+    "VARIANT_ALSO_NEGOTIATES": "バリアントも交渉します。",
+    "INSUFFICIENT_STORAGE": "ストレージが不足しています。",
+    "LOOP_DETECTED": "ループが検出されました。",
+    "NOT_EXTENDED": "拡張されていません。",
+    "NETWORK_AUTHENTICATION_REQUIRED": "ネットワーク認証が必要です。"
+  },
+  "emailSubjects": {
+    "register": "EDISAへようこそ",
+    "registerGoogle": "EDISAへようこそ",
+    "resetPassword": "パスワードリセット - EDISA",
+    "changePassword": "パスワードが変更されました - EDISA",
+    "deactivateAccount": "アカウントが無効化されました - EDISA",
+    "restoreAccount": "アカウントが復元されました - EDISA",
+    "fileUpload": "ファイルアップロード完了 - EDISA",
+    "fileDownload": "ファイルダウンロード - EDISA",
+    "fileDelete": "ファイル削除 - EDISA"
+  },
+  "enterServerKey": "サーバーキーを入力",
+  "search": "検索",
+  "editProfilePicture": "プロフィール画像を編集",
+  "dragDropImage": "ここに画像をドラッグ&ドロップ",
+  "clickToBrowse": "またはクリックして参照",
+  "dragToMoveImage": "画像を移動するにはドラッグ",
+  "circleShowsAvatarArea": "円はアバターエリアを示します",
+  "securityTitle": "セキュリティ",
+  "oldPassword": "現在のパスワード",
+  "twoStepsVerification": "2段階認証",
+  "twoFactorAuthNotEnabled": "2要素認証はまだ有効化されていません。",
+  "twoFactorAuthDescription": "2要素認証は、パスワードだけでなく追加のセキュリティ層を提供します。",
+  "learnMore": "詳細はこちら。",
+  "enableTwoFactorAuth": "2要素認証を有効化",
+  "enableOneTimePassword": "ワンタイムパスワードを有効化",
+  "verifyMobileNumber": "SMS用の携帯番号を認証",
+  "enterMobilePhoneNumber": "国番号付きの携帯番号を入力してください。認証コードを送信します。",
+  "cancel": "キャンセル",
+  "createApiKey": "APIキーを作成",
+  "chooseApiKeyType": "作成したいAPIキーの種類を選択",
+  "chooseKeyType": "キータイプを選択",
+  "fullControl": "フルコントロール",
+  "modify": "編集",
+  "readExecute": "読み取り・実行",
+  "listFolderContents": "フォルダ内容の一覧",
+  "readOnly": "読み取り専用",
+  "readWrite": "読み書き",
+  "nameApiKey": "APIキーの名前を付ける",
+  "createKey": "キーを作成",
+  "apiKeyListAccess": "APIキー一覧とアクセス権",
+  "apiKeyDescription": "APIキーは、アプリケーションを識別するための暗号化された文字列です。",
+  "apiKeyUsage": "APIリクエストをプロジェクトに関連付けるために使用されます。",
+  "fullAccess": "フルアクセス",
+  "createdOn": "{date}に作成",
+  "serverKey2": "サーバーキー2",
+  "serverKey3": "サーバーキー3",
+  "recentDevices": "最近のデバイス",
+  "browser": "ブラウザ",
+  "device": "デバイス",
+  "location": "場所",
+  "recentActivities": "最近のアクティビティ",
+  "chromeOnWindows": "WindowsのChrome",
+  "hpSpectre360": "HP Spectre 360",
+  "switzerland": "スイス",
+  "recentActivity": "{date}",
+  "chromeOnIphone": "iPhoneのChrome",
+  "iphone12x": "iPhone 12x",
+  "australia": "オーストラリア",
+  "chromeOnAndroid": "AndroidのChrome",
+  "oneplus9Pro": "Oneplus 9 Pro",
+  "dubai": "ドバイ",
+  "chromeOnMacOS": "MacOSのChrome",
+  "appleImac": "Apple iMac",
+  "india": "インド",
+  "faqTitle": "よくある質問",
+  "frequentlyAskedQuestions": "よくある質問",
+  "howDoIUpdateMyProfile": "プロフィールを更新するにはどうすればよいですか？",
+  "goToMyProfilePage": "マイプロフィールページに移動します",
+  "editYourInformation": "情報を編集します",
+  "clickSaveChanges": "変更を保存をクリックします",
+  "howDoIChangeMyPassword": "パスワードを変更するにはどうすればよいですか？",
+  "useTheChangePasswordOption": "設定ページのパスワード変更オプションを使用します",
+  "howDoIContactSupport": "サポートに連絡するにはどうすればよいですか？",
+  "pleaseEmailSupport": "サポートが必要な場合は support@edisa.com までメールしてください",
+  "showing": "表示中",
+  "to": "から",
+  "entries": "件",
+  "noData": "データがありません",
+  "info": "_START_ から _END_ を表示（全 _TOTAL_ 件中）",
+  "infoEmpty": "0 から 0 を表示（全 0 件中）",
+  "infoFiltered": "（全 _MAX_ 件からフィルタリング）",
+  "lengthMenu": "_MENU_ 件表示",
+  "zeroRecords": "一致するレコードが見つかりません",
+  "notificationPreferences": "通知と設定",
+  "enableEmailNotifications": "メール通知を有効化",
+  "enablePushNotifications": "プッシュ通知を有効化",
+  "active": "アクティブ",
+  "inactive": "非アクティブ",
+  "suspended": "一時停止",
+  "settingsTitle": "設定"
+}
