[UPDATE]/Enhance multi-language support by updating email templates, adjusting language handling in frontend components, and refining language dropdown functionality across various pages.

--- a/Frontend/assets/lang/en.json
+++ b/Frontend/assets/lang/en.json
@@ -70,7 +70,7 @@
   "exportAllUsers": "Export All Users",
   "addNewUser": "Add New User",
   "verifyEmailTitle": "Account Created Successfully! 🎉",
-  "verifyEmailDesc": "Your account has been created successfully! A verification email has been sent to your email address: <span id=\"userEmail\" class=\"fw-medium\">Loading...</span>. Please check your email and click the verification link to activate your account.",
+  "verifyEmailDesc": "A verification email has been sent to your email address: <span id=\"userEmail\" class=\"fw-medium\">Loading...</span>. Please check your email and click the verification link to activate your account.",
   "goToLogin": "Go to Login",
   "notReceivedEmail": "Didn't receive the email?",
   "resendVerification": "Resend Verification Email",
@@ -525,5 +525,20 @@
   "deleteUserConfirmDesc": "You are about to permanently delete this user account. This action will:",
   "deleteUserDeactivate": "Deactivate the user account immediately",
   "deleteUserSendEmail": "Send a deactivation email to the user",
-  "deleteUserRemoveSessions": "Remove all active sessions and tokens"
+  "deleteUserRemoveSessions": "Remove all active sessions and tokens",
+  "verifyEmailDescPrefix": "A verification email has been sent to your email address:",
+  "verifyEmailDescSuffix": "Please check your email and click the verification link to activate your account.",
+  "emailVerifiedSuccessfully": "Your account has been activated successfully! You will be redirected to the login page in a few seconds.",
+  "invalidOrExpiredToken": "Invalid or expired verification link!",
+  "verifyEmailFailed": "Account activation failed. Please try again or contact support!",
+  "languageChanged": "Language changed successfully!",
+  "emailAlreadyVerified": "Your account has already been verified! You will be redirected to the login page.",
+  "auth.reset-password.title": "Reset Password - EDISA",
+  "auth.reset-password.description": "Reset Password for email: {email}",
+  "auth.reset-password.new-password-label": "New Password",
+  "auth.reset-password.confirm-password-label": "Confirm Password",
+  "auth.reset-password.back-to-login": "Back to Login",
+  "auth.reset-password.set-new-password-button": "Set New Password",
+  "failedToValidateResetToken": "Failed to validate reset token!",
+  "verifyEmailInstruction": "Please check your email and click the verification link to activate your account."
 }
