--- a/Frontend/assets/lang/vi.json
+++ b/Frontend/assets/lang/vi.json
@@ -58,7 +58,7 @@
   "userManagement": "Quản lý người dùng",
   "dashboard": "Bảng điều khiển",
   "verifyEmailTitle": "Tạo tài khoản thành công! 🎉",
-  "verifyEmailDesc": "Tài khoản của bạn đã được tạo thành công! Một email xác thực đã được gửi tới địa chỉ: <span id=\"userEmail\" class=\"fw-medium\">Đang tải...</span>. Vui lòng kiểm tra email và nhấn vào liên kết xác thực để kích hoạt tài khoản.",
+  "verifyEmailDesc": "Một email xác thực đã được gửi tới địa chỉ: <span id=\"userEmail\" class=\"fw-medium\">Đang tải...</span>. Vui lòng kiểm tra email và nhấn vào liên kết xác thực để kích hoạt tài khoản.",
   "goToLogin": "Đến trang đăng nhập",
   "notReceivedEmail": "Không nhận được email?",
   "resendVerification": "Gửi lại email xác thực",
@@ -520,5 +520,20 @@
   "active": "Hoạt động",
   "inactive": "Không hoạt động",
   "suspended": "Tạm ngưng",
-  "banned": "Đã khóa"
+  "banned": "Đã khóa",
+  "verifyEmailDescPrefix": "Một email xác thực đã được gửi tới địa chỉ email của bạn:",
+  "verifyEmailDescSuffix": "Vui lòng kiểm tra email và nhấn vào liên kết xác thực để kích hoạt tài khoản.",
+  "emailVerifiedSuccessfully": "Tài khoản đã được kích hoạt thành công! Bạn sẽ được chuyển về trang đăng nhập sau vài giây.",
+  "invalidOrExpiredToken": "Liên kết xác thực không hợp lệ hoặc đã hết hạn!",
+  "verifyEmailFailed": "Kích hoạt tài khoản thất bại. Vui lòng thử lại hoặc liên hệ hỗ trợ!",
+  "languageChanged": "Thay đổi ngôn ngữ thành công!",
+  "emailAlreadyVerified": "Tài khoản đã được xác thực trước đó! Bạn sẽ được chuyển về trang đăng nhập.",
+  "auth.reset-password.title": "Đặt lại mật khẩu - EDISA",
+  "auth.reset-password.description": "Đặt lại mật khẩu cho email: {email}",
+  "auth.reset-password.new-password-label": "Mật khẩu mới",
+  "auth.reset-password.confirm-password-label": "Xác nhận mật khẩu",
+  "auth.reset-password.back-to-login": "Quay về đăng nhập",
+  "auth.reset-password.set-new-password-button": "Đặt mật khẩu mới",
+  "failedToValidateResetToken": "Lỗi khi xác thực token đặt lại mật khẩu!",
+  "verifyEmailInstruction": "Vui lòng kiểm tra email và nhấn vào liên kết xác thực để kích hoạt tài khoản."
 }
