--- a/Frontend/assets/lang/ja.json
+++ b/Frontend/assets/lang/ja.json
@@ -55,8 +55,8 @@
   "changePassword": "パスワードを変更",
   "backToUserManagement": "ユーザー管理に戻る",
   "verifyEmailTitle": "アカウント作成に成功しました！🎉",
-  "verifyEmailDesc": "アカウントが正常に作成されました。確認メールが <span id=\"userEmail\" class=\"fw-medium\">読み込み中...</span> に送信されました。メールを確認し、認証リンクをクリックしてアカウントを有効化してください。",
-  "goToLogin": "ログインへ",
+  "verifyEmailDesc": "確認メールが <span id=\"userEmail\" class=\"fw-medium\">読み込み中...</span> に送信されました。メールを確認し、認証リンクをクリックしてアカウントを有効化してください。",
+  "goToLogin": "ログインへ",  
   "notReceivedEmail": "メールが届きませんか？",
   "resendVerification": "確認メールを再送信",
   "deactivateAccount": "アカウントを無効化",
@@ -532,5 +532,20 @@
   "active": "アクティブ",
   "inactive": "非アクティブ",
   "suspended": "一時停止",
-  "settingsTitle": "設定"
+  "settingsTitle": "設定",
+  "verifyEmailDescPrefix": "ご登録ありがとうございます！確認メールが送信されました:",
+  "verifyEmailDescSuffix": "メールを確認し、認証リンクをクリックしてアカウントを有効化してください。",
+  "emailVerifiedSuccessfully": "アカウントが正常に有効化されました！数秒後にログインページへリダイレクトされます。",
+  "invalidOrExpiredToken": "認証リンクが無効または期限切れです！",
+  "verifyEmailFailed": "アカウントの有効化に失敗しました。再試行するかサポートへご連絡ください！",
+  "languageChanged": "言語が変更されました！",
+  "emailAlreadyVerified": "アカウントはすでに認証されています。ログインページへリダイレクトします。",
+  "auth.reset-password.title": "パスワードをリセット - EDISA",
+  "auth.reset-password.description": "メールアドレス {email} のパスワードをリセット",
+  "auth.reset-password.new-password-label": "新しいパスワード",
+  "auth.reset-password.confirm-password-label": "確認用パスワード",
+  "auth.reset-password.back-to-login": "ログインページへ戻る",
+  "auth.reset-password.set-new-password-button": "新しいパスワードを設定",
+  "failedToValidateResetToken": "リセットトークンの検証に失敗しました！",
+  "verifyEmailInstruction": "メールを確認し、認証リンクをクリックしてアカウントを有効化してください。"
 }
