--- a/Frontend/assets/lang/ja.json
+++ b/Frontend/assets/lang/ja.json
@@ -179,7 +179,7 @@
   "areYouSureDeleteAccount": "本当にアカウントを削除しますか？",
   "noGoingBack": "アカウントを削除すると、元に戻すことはできません。よく確認してください。",
   "confirmAccountDeactivation": "アカウントの無効化を確認",
-  "created": "作成日",
+  "createdAt": "作成日",
   "submit": "送信",
   "deleteAccount": "アカウントを削除",
   "deleteUser": "ユーザー削除",
@@ -208,12 +208,13 @@
   "googleLoginSuccessfulRedirecting": "Googleログイン成功。リダイレクト中...",
   "googleLoginFailed": "Googleログインに失敗しました。",
   "accountBanned": "あなたのアカウントは凍結されています。",
+  "yourAccountHasBeenDeactivated": "あなたのアカウントは凍結されています。",
   "accountDeleted": "あなたのアカウントは削除されました。",
   "loggingOut": "ログアウト中...",
   "loggedOutSuccessfully": "ログアウトしました。",
   "addNewUser": "新規ユーザー追加",
-  "manageActiveUsers": "アクティブユーザー管理",
-  "viewDeactiveUsers": "非アクティブユーザー表示",
+  "manageActiveUsers": "アクティブユーザー",
+  "viewDeactiveUsers": "非アクティブユーザー",
   "exportAllUsers": "全ユーザーをエクスポート",
   "currentlyActive": "現在アクティブ",
   "currentlyInactive": "現在非アクティブ",
@@ -561,7 +562,7 @@
   "auth.reset-password.back-to-login": "ログインページへ戻る",
   "auth.reset-password.set-new-password-button": "新しいパスワードを設定",
   "failedToValidateResetToken": "リセットトークンの検証に失敗しました！",
-  "verifyEmailInstruction": "メールを確認し、認証リンクをクリックしてアカウントを有効化してください。",
+  "verifyEmailInstruction": "メールを確認し、アカウントを有効にするために確認リンクをクリックしてください。",
   "oldPasswordIncorrect": "古いパスワードが正しくありません。",
   "hundredPercent": "100%",
   "left": "左に回転",
@@ -571,5 +572,10 @@
   "exportSuccess": "エクスポート成功",
   "exportFailed": "エクスポート失敗",
   "updatedAt": "更新日時",
-  "isDeleted": "削除済み"
+  "isDeleted": "削除済み",
+  "userList": "ユーザーリスト",
+  "deleteFailed": "削除に失敗しました",
+  "modalNotFound": "モーダルが見つかりません",
+  "failedToLoadData": "データの読み込みに失敗しました",
+  "googleId": "Google ID"
 }
