[FIX]/Export Title

--- a/Frontend/assets/lang/en.json
+++ b/Frontend/assets/lang/en.json
@@ -69,8 +69,11 @@
   "activeUsers": "Active Users",
   "quickActions": "Quick Actions",
   "manageActiveUsers": "Active Users",
+  "pdfLibraryNotLoaded": "PDF library not loaded.",
   "viewDeactiveUsers": "Deactive Users",
   "exportAllUsers": "Export All Users",
+  "false": "False",
+  "true": "True",
   "addNewUser": "Add New User",
   "verifyEmailTitle": "Account Created Successfully! 🎉",
   "verifyEmailDesc": "A verification email has been sent to your email address: <span id=\"userEmail\" class=\"fw-medium\">Loading...</span>. Please check your email and click the verification link to activate your account.",
