--- a/Frontend/assets/lang/ja.json
+++ b/Frontend/assets/lang/ja.json
@@ -90,7 +90,8 @@
   "selectPlaceholder": "選択...",
   "invalidFeedback": "このフィールドは必須です。",
   "formText": "フォームテキスト",
-  "usernameRequired": "ユーザー名は必須です。",
+  "true": "はい",
+  "false": "いいえ",
   "usernameInvalidFormat": "ユーザー名は英数字のみ使用可能で、スペースや特殊文字は使用できません。",
   "usernameRequirements": "ユーザー名は英数字のみ使用可能で、スペースや特殊文字は使用できません",
   "usernameCannotChange": "ユーザー名は変更できません",
@@ -213,6 +214,7 @@
   "loggingOut": "ログアウト中...",
   "loggedOutSuccessfully": "ログアウトしました。",
   "addNewUser": "新規ユーザー追加",
+  "pdfLibraryNotLoaded": "PDFライブラリが読み込まれていません。",
   "manageActiveUsers": "アクティブユーザー",
   "viewDeactiveUsers": "非アクティブユーザー",
   "exportAllUsers": "全ユーザーをエクスポート",
