--- a/Frontend/assets/lang/vi.json
+++ b/Frontend/assets/lang/vi.json
@@ -89,7 +89,8 @@
   "selectPlaceholder": "Phần tử placeholder",
   "invalidFeedback": "Phần tử invalid-feedback",
   "formText": "Phần tử form-text",
-  "usernameRequired": "Tên đăng nhập là bắt buộc.",
+  "true": "Có",
+  "false": "Không",
   "usernameInvalidFormat": "Tên đăng nhập chỉ được chứa chữ cái và số, không có khoảng trắng hoặc ký tự đặc biệt.",
   "usernameRequirements": "Tên đăng nhập chỉ được chứa chữ cái và số, không có khoảng trắng hoặc ký tự đặc biệt",
   "usernameCannotChange": "Không thể thay đổi tên đăng nhập",
@@ -290,6 +291,7 @@
   "loggedOutSuccessfully": "Đăng xuất thành công.",
   "addNewUser": "Thêm người dùng mới",
   "manageActiveUsers": "Người dùng hoạt động",
+  "pdfLibraryNotLoaded": "Thư viện PDF không được tải lên.",
   "viewDeactiveUsers": "Người dùng đã dừng hoạt động",
   "exportAllUsers": "Xuất tất cả người dùng",
   "allUsers": "Tất cả người dùng",
